# DSA-mini-project

./: README.md  final_report.docx  mini-project-draft_v3.docx  mini-project-draft_v4.docx  mini-project-draft_v5.docx  mini-project-draft_v6.docx  mini-project-draft_v7.docx  mini-project-draft_v8.docx  mini-project-draft_v9.docx  ~$ni-project-draft_v4.docx
archieve_report/: mini-project-draft_v1.docx  mini-project-draft_v2.docx  mini-project-draft_v3.docx  mini-project-draft_v6.docx
scms/: CMakeLists.txt  main.cpp
scms/src/: course.cpp  course.h  courseList.cpp  courseList.h  courses.txt  registration.cpp  registration.h  student.cpp  student.h  studentList.cpp  studentList.h
scms_v2/: CMakeLists.txt  main.cpp
scms_v2/src/: course.cpp  course.h  courseList.cpp  courseList.h  student.cpp  student.h  studentList.cpp  studentList.h
